// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-chip-list> Component basic usage with links 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            <bolt-chip url="#!">
              <a href="#!"
                 class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                 is="shadow-root"
              >
                <ssr-keep for="bolt-chip"
                          class="c-bolt-chip__text"
                >
                  Chip link 1
                </ssr-keep>
              </a>
            </bolt-chip>
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            <bolt-chip url="#!">
              <a href="#!"
                 class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                 is="shadow-root"
              >
                <ssr-keep for="bolt-chip"
                          class="c-bolt-chip__text"
                >
                  Chip link 2
                </ssr-keep>
              </a>
            </bolt-chip>
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            <bolt-chip url="#!">
              <a href="#!"
                 class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                 is="shadow-root"
              >
                <ssr-keep for="bolt-chip"
                          class="c-bolt-chip__text"
                >
                  Chip link 3
                </ssr-keep>
              </a>
            </bolt-chip>
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            <bolt-chip url="#!">
              <a href="#!"
                 class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                 is="shadow-root"
              >
                <ssr-keep for="bolt-chip"
                          class="c-bolt-chip__text"
                >
                  Chip link 4
                </ssr-keep>
              </a>
            </bolt-chip>
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-chip-list> Component basic usage with mixed behavior 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            <bolt-chip url="#!">
              <a href="#!"
                 class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                 is="shadow-root"
              >
                <ssr-keep for="bolt-chip"
                          class="c-bolt-chip__text"
                >
                  Chip link 1
                </ssr-keep>
              </a>
            </bolt-chip>
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            <bolt-chip>
              <span class="c-bolt-chip c-bolt-chip--size-small"
                    is="shadow-root"
              >
                <ssr-keep for="bolt-chip"
                          class="c-bolt-chip__text"
                >
                  Chip text 1
                </ssr-keep>
              </span>
            </bolt-chip>
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            <bolt-chip url="#!">
              <a href="#!"
                 class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
                 is="shadow-root"
              >
                <ssr-keep for="bolt-chip"
                          class="c-bolt-chip__text"
                >
                  Chip link 3
                </ssr-keep>
              </a>
            </bolt-chip>
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            <bolt-chip>
              <span class="c-bolt-chip c-bolt-chip--size-small"
                    is="shadow-root"
              >
                <ssr-keep for="bolt-chip"
                          class="c-bolt-chip__text"
                >
                  Chip text 2
                </ssr-keep>
              </span>
            </bolt-chip>
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;

exports[`<bolt-chip-list> Component basic usage without links 1`] = `
<bolt-list tag="ul"
           display="inline"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ul class="c-bolt-list c-bolt-list--display-inline c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center">
    <ssr-keep for="bolt-list"
              style="display: contents;"
    >
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            <bolt-chip>
              <span class="c-bolt-chip c-bolt-chip--size-small"
                    is="shadow-root"
              >
                <ssr-keep for="bolt-chip"
                          class="c-bolt-chip__text"
                >
                  Chip text 1
                </ssr-keep>
              </span>
            </bolt-chip>
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            <bolt-chip>
              <span class="c-bolt-chip c-bolt-chip--size-small"
                    is="shadow-root"
              >
                <ssr-keep for="bolt-chip"
                          class="c-bolt-chip__text"
                >
                  Chip text 2
                </ssr-keep>
              </span>
            </bolt-chip>
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start">
          <ssr-keep for="bolt-list-item">
            <bolt-chip>
              <span class="c-bolt-chip c-bolt-chip--size-small"
                    is="shadow-root"
              >
                <ssr-keep for="bolt-chip"
                          class="c-bolt-chip__text"
                >
                  Chip text 3
                </ssr-keep>
              </span>
            </bolt-chip>
          </ssr-keep>
        </li>
      </bolt-list-item>
      <bolt-list-item last>
        <li class="c-bolt-list-item c-bolt-list-item--display-inline c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item">
          <ssr-keep for="bolt-list-item">
            <bolt-chip>
              <span class="c-bolt-chip c-bolt-chip--size-small"
                    is="shadow-root"
              >
                <ssr-keep for="bolt-chip"
                          class="c-bolt-chip__text"
                >
                  Chip text 4
                </ssr-keep>
              </span>
            </bolt-chip>
          </ssr-keep>
        </li>
      </bolt-list-item>
    </ssr-keep>
  </ul>
</bolt-list>
`;
